# YouTube2Ableton

./: .gitignore  CMakeLists.txt  README.md
cmake/: cross_compile.cmake
cmake/Modules/: FindFFmpeg.cmake
plugin/: CMakeLists.txt
plugin/include/YourPluginName/: PluginEditor.h
plugin/source/: PluginEditor.cpp
